--- a/HealthyHappyTummy2/app/src/main/res/layout/activity_main.xml
+++ b/HealthyHappyTummy2/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
     <SurfaceView
         android:id="@+id/preview"
         android:layout_width="fill_parent"
