Added list view and relevant activities and created food entry class

--- a/HealthyHappyTummy2/app/src/main/res/layout/content_diary.xml
+++ b/HealthyHappyTummy2/app/src/main/res/layout/content_diary.xml
@@ -8,4 +8,20 @@
     tools:context=".DiaryActivity"
     tools:showIn="@layout/activity_diary">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ListView
+            android:id="@+id/diary_entries"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="2dp" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
