--- a/HealthyHappyTummy2/app/src/main/res/layout/activity_diary.xml
+++ b/HealthyHappyTummy2/app/src/main/res/layout/activity_diary.xml
@@ -20,7 +20,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_diary" />
+    <include
+        android:id="@+id/diary_list"
+        layout="@layout/content_diary" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
