--- a/HealthyHappyTummy2/app/src/main/res/layout/activity_view_entry.xml
+++ b/HealthyHappyTummy2/app/src/main/res/layout/activity_view_entry.xml
@@ -8,8 +8,13 @@
 
     <ImageView
         android:id="@+id/entry_image"
-        android:layout_width="385dp"
+        android:layout_width="0dp"
         android:layout_height="261dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
