--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
@@ -40,4 +40,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="155dp"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="350dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="Add Entry"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
