--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_add_entry_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_add_entry_page.xml
@@ -54,6 +54,13 @@
                         android:layout_height="wrap_content"
                         android:hint="calories"
                         android:inputType="number" />
+
+                    <Switch
+                        android:id="@+id/switch1"
+                        android:layout_width="106dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Happy" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputEditText
@@ -64,7 +71,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTitle"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="title" />
