--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
@@ -50,4 +50,12 @@
         app:layout_constraintVertical_bias="0.73"
         app:srcCompat="@mipmap/ic_launcher" />
 
+    <ListView
+        android:id="@+id/entries_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+
 </android.support.constraint.ConstraintLayout>
