list view populated with diary entries, view entry functionality restored

--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
@@ -51,10 +51,9 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <ListView
-        android:id="@+id/entries_list"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:id="@+id/entriesList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 
