--- a/HappyHealthyTummyApp/app/src/main/res/layout/list_item.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/list_item.xml
@@ -2,10 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
+
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="80dp"
+        android:layout_width="87dp"
         android:layout_height="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="57dp"
         android:contentDescription="Food Picture"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" />
