--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
@@ -23,4 +23,12 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="Camera" />
 </RelativeLayout>
