--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
@@ -9,20 +9,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-        </LinearLayout>
     </ScrollView>
 
-    <ListView
-        android:id="@+id/diaryEntries"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            android:visibility="visible" />
+
+        <ListView
+            android:id="@+id/diaryEntries"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="0dp" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/camera"
@@ -31,4 +42,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="Camera" />
+
 </RelativeLayout>
