--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
@@ -9,31 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            android:visibility="visible" />
+            android:orientation="vertical" >
 
-        <ListView
-            android:id="@+id/diaryEntries"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="0dp" />
+        </LinearLayout>
+    </ScrollView>
 
-    </LinearLayout>
+    <ListView
+        android:id="@+id/diaryEntries"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/camera"
@@ -42,5 +31,4 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="Camera" />
-
 </RelativeLayout>
