--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_add_entry_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_add_entry_page.xml
@@ -70,7 +70,7 @@
                     android:hint="description " />
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputEditText
+            <AutoCompleteTextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
