--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
@@ -7,27 +7,35 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/appBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" />
 
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            app:srcCompat="@drawable/hometitle" />
+
         <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tabLayout"
+            app:tabGravity="fill"
             app:tabMode="fixed"
-            app:tabGravity="fill">
-        </android.support.design.widget.TabLayout>
+            app:tabTextColor="@android:color/holo_orange_light"></android.support.design.widget.TabLayout>
 
     </android.support.design.widget.AppBarLayout>
 
