--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_view_entry.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_view_entry.xml
@@ -11,12 +11,11 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="175dp"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/viewentrytitle" />
 
     </android.support.design.widget.AppBarLayout>
 
