Can view, add, edit, delete notifications on the page (Notification functionality in progress)

--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_notification_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_notification_page.xml
@@ -8,4 +8,11 @@
     tools:context=".Controller.NotificationPageActivity"
     tools:showIn="@layout/activity_notification_page">
 
+    <ListView
+        android:id="@+id/notifications"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
 </android.support.constraint.ConstraintLayout>
