--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_add_notification_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_add_notification_page.xml
@@ -20,14 +20,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_notification_page" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+    <include
+        layout="@layout/content_add_notification_page"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="186dp" />
 
 </RelativeLayout>
