--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_add_notification_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_add_notification_page.xml
@@ -23,17 +23,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.807" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/saveNotificationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="88dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_purple"
+        app:srcCompat="@android:drawable/ic_menu_save"
+        tools:layout_editor_absoluteX="172dp"
+        tools:layout_editor_absoluteY="439dp" />
+
+    <!--<Button-->
+        <!--android:id="@+id/saveNotificationButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="88dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:text="Save"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     <RadioGroup
         android:id="@+id/mealGroup"
@@ -74,20 +84,40 @@
             android:layout_weight="1"
             android:text="Snack" />
 
+
+
     </RadioGroup>
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/deleteNotificationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Delete"
-        android:visibility="invisible"
-        android:clickable="false"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_purple"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saveNotificationButton" />
+        app:layout_constraintTop_toBottomOf="@+id/saveNotificationButton"
+        app:layout_constraintVertical_bias="0.25"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
+<!--<Button-->
+        <!--android:id="@+id/deleteNotificationButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:text="Delete"-->
+        <!--android:visibility="invisible"-->
+        <!--android:clickable="false"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/saveNotificationButton" />-->
 
 </android.support.constraint.ConstraintLayout>
