--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_main_page.xml
@@ -13,7 +13,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
+        android:background="@android:color/holo_purple"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
@@ -21,15 +24,30 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@android:color/holo_purple"
             android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
+            android:theme="?attr/actionBarTheme">
 
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/hometitle" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/hometitle" />
+        </android.support.v7.widget.Toolbar>
+
+
+        <!--<android.support.constraint.ConstraintLayout-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="200dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:background="@android:color/holo_purple"-->
+            <!--android:minHeight="?attr/actionBarSize"-->
+            <!--android:theme="?attr/actionBarTheme">-->
+
+            <!---->
+        <!--</android.support.constraint.ConstraintLayout>-->
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
@@ -39,6 +57,7 @@
             app:tabMode="fixed"
             app:tabTextColor="@android:color/holo_orange_light"></android.support.design.widget.TabLayout>
 
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
@@ -46,6 +65,8 @@
         android:layout_below="@+id/appBar"
         android:layout_height="match_parent"
         android:id="@+id/viewPager">
+
+
 
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
