--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_add_entry_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_add_entry_page.xml
@@ -8,17 +8,34 @@
     tools:context=".Controller.AddEntryPageActivity"
     tools:showIn="@layout/activity_add_entry_page">
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/postEntryButton"
-        android:layout_width="334dp"
-        android:layout_height="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="Post"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_purple"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.867"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <!--<Button-->
+        <!--android:id="@+id/postEntryButton"-->
+        <!--android:layout_width="334dp"-->
+        <!--android:layout_height="44dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginBottom="16dp"-->
+        <!--android:text="Post"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/linearLayout"
