--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_calendar.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_calendar.xml
@@ -41,11 +41,19 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
 
-                <Button
+                <android.support.design.widget.FloatingActionButton
                     android:id="@+id/searchButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="SEARCH" />
+                    android:layout_gravity="center"
+                    android:clickable="true"
+                    app:srcCompat="@android:drawable/ic_search_category_default" />
+
+                <!--<Button-->
+                    <!--android:id="@+id/searchButton"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="SEARCH" />-->
 
                 <TextView
                     android:id="@+id/title"
@@ -57,7 +65,7 @@
 
         <ListView
             android:id="@+id/listView"
-            android:layout_width="300dp"
+            android:layout_width="398dp"
             android:layout_height="163dp" />
 
     </LinearLayout>
