--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_edit_entry_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_edit_entry_page.xml
@@ -8,19 +8,36 @@
     tools:context=".Controller.EditEntryPageActivity"
     tools:showIn="@layout/activity_edit_entry_page">
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/doneEntryButton"
-        android:layout_width="334dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Done"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:srcCompat="@android:drawable/ic_menu_save" />
+
+    <!--<Button-->
+        <!--android:id="@+id/doneEntryButton"-->
+        <!--android:layout_width="334dp"-->
+        <!--android:layout_height="44dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:text="Done"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="368dp"
         android:layout_height="377dp"
         android:layout_marginTop="8dp"
