--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_main_page.xml
@@ -55,6 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        tools:layout_editor_absoluteY="8dp"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
