--- a/HappyHealthyTummyApp/app/src/main/res/layout/fragment_daily.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/fragment_daily.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_daily"
     android:layout_width="match_parent"
@@ -27,20 +28,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true" >
 
-        <Button
-            android:id="@+id/camera"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/diaryEntries"
+
+        </ListView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addEntryButtonHome"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="148dp"
-            android:layout_marginBottom="24dp"
-            android:fontFamily="@font/comfortaa_light"
-            android:text="Camera"
-            android:textColorLink="@color/colorPrimary" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="19dp"
+            android:clickable="true"
+            app:backgroundTint="@android:color/holo_purple"
+            app:srcCompat="@android:drawable/ic_menu_add" />
+
+
+
+        <!--<Button-->
+            <!--android:id="@+id/camera"-->
+            <!--style="@style/Widget.AppCompat.Button.Colored"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignBottom="@+id/diaryEntries"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_marginEnd="148dp"-->
+            <!--android:layout_marginBottom="24dp"-->
+            <!--android:fontFamily="@font/comfortaa_light"-->
+            <!--android:text="Camera"-->
+            <!--android:textColorLink="@color/colorPrimary" />-->
+
     </RelativeLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
