moved monthly, added feedback, and added rough recipe list

--- a/HappyHealthyTummyApp/app/src/main/res/layout/activity_calendar.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/activity_calendar.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_calendar" />
+    <include layout="@layout/fragment_monthly" />
 
 </android.support.design.widget.CoordinatorLayout>
