--- a/HappyHealthyTummyApp/app/src/main/res/layout/content_feedback.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/layout/content_feedback.xml
@@ -8,4 +8,41 @@
     tools:context=".Controller.FeedbackActivity"
     tools:showIn="@layout/activity_feedback">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/AverageCalories"
+                android:layout_width="370dp"
+                android:layout_height="120dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/HappyPercentage"
+                android:layout_width="match_parent"
+                android:layout_height="104dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/FirstEntry"
+                android:layout_width="match_parent"
+                android:layout_height="92dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/LastEntry"
+                android:layout_width="426dp"
+                android:layout_height="121dp"
+                android:text="TextView"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="58dp" />
+        </LinearLayout>
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
